--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Project</title>
+        <title>Karangnunggal</title>
         
 <!-- 
 
@@ -114,7 +114,7 @@ https://templatemo.com/tm-518-sentra
                     <div class="image"></div>
                     <div class="info">
                         <div>
-                          <h1>Wellcome To<br>Karangnunggal</h1>
+                          <h1>Welcome To<br>Karangnunggal</h1>
                           <div class="white-button button">
                               <a href="#featured">Discover More</a>
                           </div>
